<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.AddressFragment"
        android:background="#FFFFFF"
        tools:layout_editor_absoluteY="81dp">
    <TextView
            android:text="What is your address?"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addressQuestionText"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="7dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/addressInputField" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="Next"
            android:textColor="@color/red"
            android:background="#FFFFFF"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:id="@+id/confirmAddressNextButton"
            android:typeface="normal" android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/addressSuggestionList"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:gravity="center"
            android:id="@+id/addressInputField"
            android:textStyle="bold"
            android:background="#FFFFFF"
            android:hint="@string/AddressHintText"
            app:layout_constraintTop_toBottomOf="@+id/addressQuestionText" android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/addressSuggestionList"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp" android:layout_marginEnd="4dp" android:layout_marginRight="4dp"/>
    <android.support.v7.widget.RecyclerView
            android:layout_width="344dp"
            android:layout_height="0dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/addressSuggestionList" app:layout_constraintTop_toBottomOf="@+id/addressInputField"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/confirmAddressNextButton"/>
</android.support.constraint.ConstraintLayout>