...
            android:layout_height="wrap_content"
            android:id="@+id/insurancePageQuestion"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="7dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/insuranceInputField" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="Next"
            android:textColor="@color/red"
            android:background="#FFFFFF"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:id="@+id/confirmInsuranceButton"
            android:typeface="normal" android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/insuranceProviders"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.994"/>
    <EditText
...
